# Cache

./: .gitignore  CMakeLists.txt  README.md  main.cc  readme.md
include/: cache.hpp  caches.hpp
src/: cache.cc  main.cc  main_2q_cache.cc  main_ideal_cache.cc
tests/: main_test.cc  tests.cc  tests.hpp
